--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
+    "start": "vite preview --port $PORT",
     "build": "vite build",
+    "dev": "vite --host"
+  }
+}
+
     "preview": "vite preview"
   },
   "dependencies": {
